--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -9,7 +9,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
-      
+rabbitmq:
+  host: 192.168.232.133
+  port: 5672
+  username: admin
+  password: admin      
 ---
 spring:
   profiles: order1
